Issue #36: Increase contrast in dark mode and make a11y happy.

--- a/web/themes/jeffgeerling/css/blog.css
+++ b/web/themes/jeffgeerling/css/blog.css
@@ -131,7 +131,7 @@
 .comment__submitted,
 .comment .links {
   font-size: .85em;
-  color: #999;
+  color: #aaa;
   margin-top: .5em;
 }
 
@@ -140,12 +140,12 @@
 .node__submitted a:visited
 .comment__submitted a:visited {
   text-decoration: none;
-  color: #777;
+  color: #ccc;
 }
 
 .comment .links a,
 .comment .links a:visited {
-  color: #777;
+  color: #ccc;
   text-transform: lowercase;
 }
 
