--- a/web/themes/jeffgeerling/css/resume.css
+++ b/web/themes/jeffgeerling/css/resume.css
@@ -79,7 +79,7 @@ h1.page-title {
 }
 
 .resume-section .location {
-  color: #777;
+  color: #aaa;
   margin-top: 0;
 }
 
